@@ -15,8 +15,6 @@ from xml.etree import ElementTree
 
 import pytest
 
-from sphinx.util import docutils
-
 
 # check given command is runnable
 def runnable(command):
@@ -357,8 +355,6 @@ def test_epub_css_files(app):
             'href="https://example.com/custom.css" />' not in content)
 
 
-@pytest.mark.skipif(docutils.__version_info__ < (0, 13),
-                    reason='docutils-0.13 or above is required')
 @pytest.mark.sphinx('epub', testroot='roles-download')
 def test_html_download_role(app, status, warning):
     app.build()
