@@ -13,6 +13,11 @@ Incompatible changes
 Deprecated
 ----------
 
+* ``sphinx.directives.patches.CSVTable``
+* ``sphinx.directives.patches.ListTable``
+* ``sphinx.directives.patches.RSTTable``
+* ``sphinx.util.smartypants``
+
 Features added
 --------------
 
